Remove main overflow fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -224,11 +224,6 @@ a.button.secondary, button.secondary {
   color: var(--text-color)
 } 
 
-/* TODO: Remove this, this is just to fix the mobile view */
-main {
-  overflow: hidden;
-}
-
 main input {
   font-size: 1.25rem;
   width: 100%;
